[gd_scene load_steps=22 format=3 uid="uid://vli2vtg7ccmj"]

[ext_resource type="Script" path="res://Obstacles/asteriod.gd" id="1_mof7j"]
[ext_resource type="PackedScene" uid="uid://x5263ax8u7ah" path="res://Imports/UFO/ufo.gltf" id="2_ppj4v"]
[ext_resource type="PackedScene" uid="uid://dv0jq3pemcjyr" path="res://Colliders/hit_box.tscn" id="3_3duco"]
[ext_resource type="PackedScene" uid="uid://cs4pdnl4db0o1" path="res://Colliders/hurt_box.tscn" id="4_xt8qd"]
[ext_resource type="PackedScene" uid="uid://btfydm00tpmrs" path="res://Scenes/stats.tscn" id="5_37g8d"]
[ext_resource type="Shader" path="res://Pickups/rainbow.gdshader" id="6_iu6l6"]
[ext_resource type="Texture2D" uid="uid://bnypuailo1uh5" path="res://Obstacles/speed_arrow.png" id="7_ahuke"]
[ext_resource type="AudioStream" uid="uid://mitav5lsudvr" path="res://Audio/SFXs/Obstacle/asteriodHit.wav" id="8_umdpt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pacr7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bpsk1"]

[sub_resource type="SphereShape3D" id="SphereShape3D_anbqh"]

[sub_resource type="SphereShape3D" id="SphereShape3D_aq76g"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7ogoq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5hl2a"]
radius = 0.305367
height = 1.2918

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i2kll"]
render_priority = 0
shader = ExtResource("6_iu6l6")
shader_parameter/uv1_scale = Vector2(1, 1)
shader_parameter/alpha = 1.0
shader_parameter/rippliing = true
shader_parameter/using_texture = false
shader_parameter/head_color = Vector3(0, 0.5, 0)
shader_parameter/face_color = Vector3(0, 1, 1)

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_dyfuq"]
material = SubResource("ShaderMaterial_i2kll")
shape = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bxigj"]
transparency = 1
diffuse_mode = 3
albedo_texture = ExtResource("7_ahuke")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_6xea6"]
material = SubResource("StandardMaterial3D_bxigj")
size = Vector2(0.1, 0.1)

[sub_resource type="Animation" id="Animation_ijq7j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpinPivot/MeshInstance3D/blockbench_export2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpinPivot/MeshInstance3D/blockbench_export3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_q5n0i"]
resource_name = "flash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpinPivot/MeshInstance3D/blockbench_export2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpinPivot/MeshInstance3D/blockbench_export3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_juwsi"]
_data = {
"RESET": SubResource("Animation_ijq7j"),
"flash": SubResource("Animation_q5n0i")
}

[node name="UFO" type="CharacterBody3D" node_paths=PackedStringArray("sfx", "animation_player")]
transform = Transform3D(0.33, 0, 0, 0, 0.33, 0, 0, 0, 0.33, 0, 0, 0)
collision_layer = 4
collision_mask = 0
script = ExtResource("1_mof7j")
sfx = NodePath("SFX")
SPEED_MAX = 200.0
animation_player = NodePath("AnimationPlayer")
spin_x = false
spin_z = false

[node name="SpinPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SpinPivot"]
visibility_range_end = 117.03

[node name="blockbench_export2" parent="SpinPivot/MeshInstance3D" instance=ExtResource("2_ppj4v")]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, -0.249906, 0)

[node name="blockbench_export3" parent="SpinPivot/MeshInstance3D" instance=ExtResource("2_ppj4v")]
transform = Transform3D(0.75, 0, 1.31134e-07, 0, 0.75, 0, -1.31134e-07, 0, 0.75, 0, -0.249906, 0)
visible = false

[node name="glass" parent="SpinPivot/MeshInstance3D/blockbench_export3/Node/body2" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_pacr7")

[node name="body" parent="SpinPivot/MeshInstance3D/blockbench_export3/Node/body2" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_bpsk1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_anbqh")

[node name="MainHitBox" parent="." instance=ExtResource("3_3duco")]
visible = false
collision_layer = 8
collision_mask = 256
damage = 1

[node name="CollisionShape3D" parent="MainHitBox" index="0"]
shape = SubResource("SphereShape3D_aq76g")

[node name="HurtBox" parent="." instance=ExtResource("4_xt8qd")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
visible = false
collision_layer = 16
collision_mask = 133160
damage = 2

[node name="CollisionShape3D" parent="HurtBox" index="0"]
shape = SubResource("SphereShape3D_7ogoq")

[node name="Stats" parent="." instance=ExtResource("5_37g8d")]
max_health = 3

[node name="TrailHitBox" parent="." instance=ExtResource("3_3duco")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
collision_layer = 8
collision_mask = 256

[node name="CollisionShape3D" parent="TrailHitBox" index="0"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0.799005, 0, 0)
shape = SubResource("CapsuleShape3D_5hl2a")
disabled = true

[node name="TrailMesh" type="MeshInstance3D" parent="TrailHitBox"]
transform = Transform3D(1.26066, -2.30926e-14, -4.76456e-22, 0, -2.20129e-08, 0.251798, -6.03961e-14, -0.503596, -1.10064e-08, 0.856171, 0, -1.15773e-09)
mesh = SubResource("RibbonTrailMesh_dyfuq")

[node name="SpeedParticles" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.242108, 0)
emitting = false
amount = 4
lifetime = 0.23
speed_scale = 0.5
explosiveness = 0.7
randomness = 1.0
lifetime_randomness = 0.61
local_coords = true
mesh = SubResource("QuadMesh_6xea6")
emission_shape = 3
emission_box_extents = Vector3(0.5, 0.5, 0.5)
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 4.0
linear_accel_min = 1.0
linear_accel_max = 3.0
scale_amount_min = 0.5

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_umdpt")
volume_db = -10.0
bus = &"Sound Effects"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_juwsi")
}

[connection signal="area_entered" from="MainHitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="SpinPivot/MeshInstance3D/blockbench_export3"]
[editable path="MainHitBox"]
[editable path="HurtBox"]
[editable path="TrailHitBox"]
